schemaを更新。
